// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-toast-item — render snapshots > renders default state 1`] = `
<io-toast-item variant="neutral" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <circle cx="12" cy="12" r="10"></circle>
          <path d="M12 16v-4"></path>
          <path d="M12 8h.01"></path>
        </svg>
      </span>
      <span class="toast__text">
        Notification
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;

exports[`io-toast-item — render snapshots > renders each variant > error variant 1`] = `
<io-toast-item variant="error" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <circle cx="12" cy="12" r="10"></circle>
          <path d="m15 9-6 6"></path>
          <path d="m9 9 6 6"></path>
        </svg>
      </span>
      <span class="toast__text">
        error
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;

exports[`io-toast-item — render snapshots > renders each variant > info variant 1`] = `
<io-toast-item variant="info" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <circle cx="12" cy="12" r="10"></circle>
          <path d="M12 16v-4"></path>
          <path d="M12 8h.01"></path>
        </svg>
      </span>
      <span class="toast__text">
        info
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;

exports[`io-toast-item — render snapshots > renders each variant > neutral variant 1`] = `
<io-toast-item variant="neutral" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <circle cx="12" cy="12" r="10"></circle>
          <path d="M12 16v-4"></path>
          <path d="M12 8h.01"></path>
        </svg>
      </span>
      <span class="toast__text">
        neutral
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;

exports[`io-toast-item — render snapshots > renders each variant > success variant 1`] = `
<io-toast-item variant="success" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M21.801 10A10 10 0 1 1 17 3.335"></path>
          <path d="m9 11 3 3L22 4"></path>
        </svg>
      </span>
      <span class="toast__text">
        success
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;

exports[`io-toast-item — render snapshots > renders each variant > warning variant 1`] = `
<io-toast-item variant="warning" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="toast">
      <span class="toast__icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path>
          <path d="M12 9v4"></path>
          <path d="M12 17h.01"></path>
        </svg>
      </span>
      <span class="toast__text">
        warning
      </span>
      <button type="button" class="toast__close" aria-label="Dismiss notification">
        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
          <path d="M18 6 6 18"></path>
          <path d="m6 6 12 12"></path>
        </svg>
      </button>
    </div>
  </mock:shadow-root>
</io-toast-item>
`;
